sql/antlr/sql_parser.go
// Code generated from SQL.g4 by ANTLR 4.12.0. DO NOT EDIT.

package antlr // SQL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SQLParser struct {
	*antlr.BaseParser
}

var sqlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sqlParserInit() {
	staticData := &sqlParserStaticData
	staticData.literalNames = []string{
		"", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "'*'", "'='", "'=='",
		"'<'", "'<='", "'>'", "'>='", "'!='", "", "", "','", "';'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "ASTERISK", "SINGLE_EQ", "DOUBLE_EQ",
		"OP_LT", "LE", "GT", "GE", "NOTEQ", "AND", "OR", "COMMA", "SEMICOLON",
		"ALL", "ANCESTOR", "AS", "ASC", "ASYNC", "BY", "CREATE", "COLLECTION",
		"CURRENT_DATE", "CURRENT_TIME", "CURRENT_TIMESTAMP", "DATABASE", "DESC",
		"DELETE", "DISTINCT", "DROP", "EACH", "EXCEPT", "FLATTEN", "FROM", "GROUP",
		"HAVING", "IN", "COLLECTION_INDEX", "INSERT", "INTERSECT", "INTO", "IS",
		"LIMIT", "NIL", "OFFSET", "OPTIONS", "ORDER", "SELECT", "SET", "SHOW",
		"SYNC", "USE", "UNION", "UPDATE", "WHERE", "VALUE", "VALUES", "TRUE",
		"FALSE", "WS", "IDENTIFIER", "NUMBER", "FLOAT", "STRING",
	}
	staticData.ruleNames = []string{
		"queries", "statement", "showStmt", "useStmt", "createStmt", "createDatabase",
		"createCollection", "drop_collectionStmt", "create_indexStmt", "drop_indexStmt",
		"selectStmt", "columns", "from_section", "table_name", "data_source",
		"grouping_section", "having_section", "sorting_section", "sorting_item",
		"sorting_specification", "limit_section", "offset_section", "insertStmt",
		"insert_columns_section", "insert_values_section", "updateStmt", "property_section",
		"deleteStmt", "expression", "expression_list", "expression_literal",
		"expression_literal_value", "expression_dictionary", "dictionary_literal",
		"expression_array", "array_literal", "expression_logic_operator", "expression_binary_operator",
		"expression_function", "function_name", "function_value", "expression_operator",
		"binary_operator", "logical_operator", "property_literal", "integer_literal",
		"real_literal", "string_literal", "true_literal", "false_literal", "sync_operator",
		"compound_operator", "condition_operator", "property", "value", "name",
		"collection_section", "collectionName", "databaseName", "column", "index_section",
		"index_name", "where_section", "unreserved_keyword",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SQLParserInit initializes any static state used to implement SQLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSQLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SQLParserInit() {
	staticData := &sqlParserStaticData
	staticData.once.Do(sqlParserInit)
}

// NewSQLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSQLParser(input antlr.TokenStream) *SQLParser {
	SQLParserInit()
	this := new(SQLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &sqlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "SQL.g4"

	return this
}

// SQLParser tokens.
const (
	SQLParserEOF               = antlr.TokenEOF
	SQLParserT__0              = 1
	SQLParserT__1              = 2
	SQLParserT__2              = 3
	SQLParserT__3              = 4
	SQLParserT__4              = 5
	SQLParserT__5              = 6
	SQLParserT__6              = 7
	SQLParserASTERISK          = 8
	SQLParserSINGLE_EQ         = 9
	SQLParserDOUBLE_EQ         = 10
	SQLParserOP_LT             = 11
	SQLParserLE                = 12
	SQLParserGT                = 13
	SQLParserGE                = 14
	SQLParserNOTEQ             = 15
	SQLParserAND               = 16
	SQLParserOR                = 17
	SQLParserCOMMA             = 18
	SQLParserSEMICOLON         = 19
	SQLParserALL               = 20
	SQLParserANCESTOR          = 21
	SQLParserAS                = 22
	SQLParserASC               = 23
	SQLParserASYNC             = 24
	SQLParserBY                = 25
	SQLParserCREATE            = 26
	SQLParserCOLLECTION        = 27
	SQLParserCURRENT_DATE      = 28
	SQLParserCURRENT_TIME      = 29
	SQLParserCURRENT_TIMESTAMP = 30
	SQLParserDATABASE          = 31
	SQLParserDESC              = 32
	SQLParserDELETE            = 33
	SQLParserDISTINCT          = 34
	SQLParserDROP              = 35
	SQLParserEACH              = 36
	SQLParserEXCEPT            = 37
	SQLParserFLATTEN           = 38
	SQLParserFROM              = 39
	SQLParserGROUP             = 40
	SQLParserHAVING            = 41
	SQLParserIN                = 42
	SQLParserCOLLECTION_INDEX  = 43
	SQLParserINSERT            = 44
	SQLParserINTERSECT         = 45
	SQLParserINTO              = 46
	SQLParserIS                = 47
	SQLParserLIMIT             = 48
	SQLParserNIL               = 49
	SQLParserOFFSET            = 50
	SQLParserOPTIONS           = 51
	SQLParserORDER             = 52
	SQLParserSELECT            = 53
	SQLParserSET               = 54
	SQLParserSHOW              = 55
	SQLParserSYNC              = 56
	SQLParserUSE               = 57
	SQLParserUNION             = 58
	SQLParserUPDATE            = 59
	SQLParserWHERE             = 60
	SQLParserVALUE             = 61
	SQLParserVALUES            = 62
	SQLParserTRUE              = 63
	SQLParserFALSE             = 64
	SQLParserWS                = 65
	SQLParserIDENTIFIER        = 66
	SQLParserNUMBER            = 67
	SQLParserFLOAT             = 68
	SQLParserSTRING            = 69
)

// SQLParser rules.
const (
	SQLParserRULE_queries                    = 0
	SQLParserRULE_statement                  = 1
	SQLParserRULE_showStmt                   = 2
	SQLParserRULE_useStmt                    = 3
	SQLParserRULE_createStmt                 = 4
	SQLParserRULE_createDatabase             = 5
	SQLParserRULE_createCollection           = 6
	SQLParserRULE_drop_collectionStmt        = 7
	SQLParserRULE_create_indexStmt           = 8
	SQLParserRULE_drop_indexStmt             = 9
	SQLParserRULE_selectStmt                 = 10
	SQLParserRULE_columns                    = 11
	SQLParserRULE_from_section               = 12
	SQLParserRULE_table_name                 = 13
	SQLParserRULE_data_source                = 14
	SQLParserRULE_grouping_section           = 15
	SQLParserRULE_having_section             = 16
	SQLParserRULE_sorting_section            = 17
	SQLParserRULE_sorting_item               = 18
	SQLParserRULE_sorting_specification      = 19
	SQLParserRULE_limit_section              = 20
	SQLParserRULE_offset_section             = 21
	SQLParserRULE_insertStmt                 = 22
	SQLParserRULE_insert_columns_section     = 23
	SQLParserRULE_insert_values_section      = 24
	SQLParserRULE_updateStmt                 = 25
	SQLParserRULE_property_section           = 26
	SQLParserRULE_deleteStmt                 = 27
	SQLParserRULE_expression                 = 28
	SQLParserRULE_expression_list            = 29
	SQLParserRULE_expression_literal         = 30
	SQLParserRULE_expression_literal_value   = 31
	SQLParserRULE_expression_dictionary      = 32
	SQLParserRULE_dictionary_literal         = 33
	SQLParserRULE_expression_array           = 34
	SQLParserRULE_array_literal              = 35
	SQLParserRULE_expression_logic_operator  = 36
	SQLParserRULE_expression_binary_operator = 37
	SQLParserRULE_expression_function        = 38
	SQLParserRULE_function_name              = 39
	SQLParserRULE_function_value             = 40
	SQLParserRULE_expression_operator        = 41
	SQLParserRULE_binary_operator            = 42
	SQLParserRULE_logical_operator           = 43
	SQLParserRULE_property_literal           = 44
	SQLParserRULE_integer_literal            = 45
	SQLParserRULE_real_literal               = 46
	SQLParserRULE_string_literal             = 47
	SQLParserRULE_true_literal               = 48
	SQLParserRULE_false_literal              = 49
	SQLParserRULE_sync_operator              = 50
	SQLParserRULE_compound_operator          = 51
	SQLParserRULE_condition_operator         = 52
	SQLParserRULE_property                   = 53
	SQLParserRULE_value                      = 54
	SQLParserRULE_name                       = 55
	SQLParserRULE_collection_section         = 56
	SQLParserRULE_collectionName             = 57
	SQLParserRULE_databaseName               = 58
	SQLParserRULE_column                     = 59
	SQLParserRULE_index_section              = 60
	SQLParserRULE_index_name                 = 61
	SQLParserRULE_where_section              = 62
	SQLParserRULE_unreserved_keyword         = 63
)

// IQueriesContext is an interface to support dynamic dispatch.
type IQueriesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext
	AllSEMICOLON() []antlr.TerminalNode
	SEMICOLON(i int) antlr.TerminalNode

	// IsQueriesContext differentiates from other interfaces.
	IsQueriesContext()
}

type QueriesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueriesContext() *QueriesContext {
	var p = new(QueriesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_queries
	return p
}

func (*QueriesContext) IsQueriesContext() {}

func NewQueriesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueriesContext {
	var p = new(QueriesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_queries

	return p
}

func (s *QueriesContext) GetParser() antlr.Parser { return s.parser }

func (s *QueriesContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *QueriesContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *QueriesContext) AllSEMICOLON() []antlr.TerminalNode {
	return s.GetTokens(SQLParserSEMICOLON)
}

func (s *QueriesContext) SEMICOLON(i int) antlr.TerminalNode {
	return s.GetToken(SQLParserSEMICOLON, i)
}

func (s *QueriesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueriesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueriesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.EnterQueries(s)
	}
}

func (s *QueriesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.ExitQueries(s)
	}
}

func (p *SQLParser) Queries() (localctx IQueriesContext) {
	this := p
	_ = this

	localctx = NewQueriesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SQLParserRULE_queries)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(128)
		p.Statement()
	}
	p.SetState(133)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(129)
				p.Match(SQLParserSEMICOLON)
			}
			{
				p.SetState(130)
				p.Statement()
			}

		}
		p.SetState(135)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}
	p.SetState(139)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SQLParserSEMICOLON {
		{
			p.SetState(136)
			p.Match(SQLParserSEMICOLON)
		}

		p.SetState(141)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ShowStmt() IShowStmtContext
	UseStmt() IUseStmtContext
	CreateStmt() ICreateStmtContext
	Create_indexStmt() ICreate_indexStmtContext
	Drop_collectionStmt() IDrop_collectionStmtContext
	Drop_indexStmt() IDrop_indexStmtContext
	SelectStmt() ISelectStmtContext
	InsertStmt() IInsertStmtContext
	UpdateStmt() IUpdateStmtContext
	DeleteStmt() IDeleteStmtContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) ShowStmt() IShowStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IShowStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IShowStmtContext)
}

func (s *StatementContext) UseStmt() IUseStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUseStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUseStmtContext)
}

func (s *StatementContext) CreateStmt() ICreateStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateStmtContext)
}

func (s *StatementContext) Create_indexStmt() ICreate_indexStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreate_indexStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreate_indexStmtContext)
}

func (s *StatementContext) Drop_collectionStmt() IDrop_collectionStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDrop_collectionStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDrop_collectionStmtContext)
}

func (s *StatementContext) Drop_indexStmt() IDrop_indexStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDrop_indexStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDrop_indexStmtContext)
}

func (s *StatementContext) SelectStmt() ISelectStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectStmtContext)
}

func (s *StatementContext) InsertStmt() IInsertStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInsertStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInsertStmtContext)
}

func (s *StatementContext) UpdateStmt() IUpdateStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUpdateStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUpdateStmtContext)
}

func (s *StatementContext) DeleteStmt() IDeleteStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeleteStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeleteStmtContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *SQLParser) Statement() (localctx IStatementContext) {
	this := p
	_ = this

	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SQLParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(152)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(142)
			p.ShowStmt()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(143)
			p.UseStmt()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(144)
			p.CreateStmt()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(145)
			p.Create_indexStmt()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(146)
			p.Drop_collectionStmt()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(147)
			p.Drop_indexStmt()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(148)
			p.SelectStmt()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(149)
			p.InsertStmt()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(150)
			p.UpdateStmt()
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(151)
			p.DeleteStmt()
		}

	}

	return localctx
}

// IShowStmtContext is an interface to support dynamic dispatch.
type IShowStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SHOW() antlr.TerminalNode
	Collection_section() ICollection_sectionContext

	// IsShowStmtContext differentiates from other interfaces.
	IsShowStmtContext()
}

type ShowStmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyShowStmtContext() *ShowStmtContext {
	var p = new(ShowStmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_showStmt
	return p
}

func (*ShowStmtContext) IsShowStmtContext() {}

func NewShowStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ShowStmtContext {
	var p = new(ShowStmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_showStmt

	return p
}

func (s *ShowStmtContext) GetParser() antlr.Parser { return s.parser }
